bugfix: reduce spacing for git history items

--- a/src/styles/components/_changes.css
+++ b/src/styles/components/_changes.css
@@ -16,6 +16,7 @@
 
 .change hr {
   flex-grow: 1;
+  margin: 0;
 }
 
 .change__title {
